src/test/deca/codegen/valid/print-opArith.deca
// Description:
//    Programme testant les opérations arithmétiques
//
// Resultats:
//    11
//    -22
//    16
//    -22
//    26
//    16
//
// Historique:
//    cree le 01/01/2024

{
        println(9 + 2);
        println(-3 - 19);
        println(-3 + 19);
        println(-3 + -19);
        println(-3 + 19 + 10);
        println(-3 - -19);
}